fixed profile overflow scroll bug

--- a/static/styles/base.css
+++ b/static/styles/base.css
@@ -730,7 +730,6 @@ table.dataTable tbody td {
     width:100%;
     height:100%;
     text-align: center;
-    overflow: scroll;
 }
 
 #upvote-text{
